--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/IMG_3808.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/IMG_3808.JPG)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -96,7 +96,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/IMG_6448.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/IMG_6448.JPG" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
