--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/IMG_3808.JPG)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/IMG_0218.jpeg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
