--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://www.instagram.com/stories/highlights/17939756596158421/"><img src="assets/img/gardening1.jpg" alt="" class="img-fluid"></a>
+                <a href="https://www.instagram.com/stories/highlights/17939756596158421/"><img src="assets/img/gardening4.JPG" alt="" class="img-fluid"></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title"><a href="https://www.instagram.com/stories/highlights/17939756596158421/">Gardening</a></h2>
