revise about me section

--- a/index.html
+++ b/index.html
@@ -135,15 +135,17 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Currently I am a backend/Android Software Engineer at <a href="https://www.yelp.com/">Yelp</a>. 
-                      I work on a team that drives diners from Yelp Reservation and Yelp Waitlist to be seated 
-                      at restaurants. Previously, I have also worked at a private cloud computing startup 
-                      called <a href="https://www.midfinsystems.com/">Midfin Systems</a>. In addition to an 
-                      internship at <a href="https://www.usa.philips.com/healthcare">Philips Healthcare</a>.
+                      Currently I am a backend software engineer on the <a href="https://www.yelp.com/">Yelp</a> Reservation 
+                      and Waitlist team. My team is responsible for driving diners from Yelp Reservation and Yelp Waitlist to be seated via Yelp. 
+                      Previously, I have also worked at a private cloud computing startup called <a href="https://www.midfinsystems.com/">Midfin Systems</a> 
+                      as well as <a href="https://www.usa.philips.com/healthcare">Philips Healthcare</a>.
+                      Prior to working in tech industry, I graduated from the University of Washington with a degree in Electrical and Computer Engineering. 
                     </p>
                     <p class="lead">
-                      In 2016, I graduated from the University of Washington with a degree in Electrical and Computer 
-                      Engineering. (say something about tech talks, blogs, mentor etc)
+                      I have a wide range of career interests, including tackling challenging backend and distributed systems problems, working on consumer facing products, 
+                      as well as learning new emerging technologies. I am also a big advocate of mentorship, as I believe it is a crucial part of one's success throughout their career. 
+                      In particular, I believe that is esstenial for college graduates to receive the mentorship that they need when they graduate, as proper mentorship can greatly alter 
+                      the trajectory of their career. 
                     </p>
                     <p class="lead">
                       Outside of professional setting, I like to practice shuffling, gardening, cooking and 
@@ -497,7 +499,7 @@
               <div class="service-content">
                 <h2 class="s-title"><a href="https://www.instagram.com/stories/highlights/17939756596158421/">Gardening</a></h2>
                 <p class="s-description text-center">
-                  I love gardening edible plants! One of my dreams is have a back yard full of edible garden.
+                  I love gardening edible plants! One of my dreams is have an editable garden in my back yard.
                 </p>
               </div>
             </div>
@@ -510,7 +512,7 @@
               <div class="service-content">
                 <h2 class="s-title"><a href="https://www.instagram.com/stories/highlights/17963951626131470/">Cooking/ Baking</a></h2>
                 <p class="s-description text-center">
-                  Mostly at home I like to cook chinese food. However, when it's football season I get into my baking mode.
+                  I mostly like to cook chinese food at home, but on special occasions I get into my baking mode.
                 </p>
               </div>
             </div>
@@ -523,7 +525,7 @@
               <div class="service-content">
                 <h2 class="s-title"><a href="https://www.tiktok.com/@nina.yang5/video/6820657018966166790">Shuffling</a></h2>
                 <p class="s-description text-center">
-                  I'm a novice at shuffling, but love to learn different combo from youtube and tiktok!
+                  I'm a novice at shuffling, but love learning new combos from youtube and tiktok!
                 </p>
               </div>
             </div>
