change about me

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                     <p class="lead">
                       Currently I am a backend software engineer on the <a href="https://www.yelp.com/">Yelp</a> Reservation 
-                      and Waitlist team. My team is responsible for driving diners from Yelp Reservation and Yelp Waitlist to be seated via Yelp. 
+                      and Waitlist team. My team is responsible for driving customers to be seated at restaurants via Yelp. 
                       Previously, I have also worked at a private cloud computing startup called <a href="https://www.midfinsystems.com/">Midfin Systems</a> 
                       as well as <a href="https://www.usa.philips.com/healthcare">Philips Healthcare</a>.
                       Prior to working in tech industry, I graduated from the University of Washington with a degree in Electrical and Computer Engineering. 
