add links to projects

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1JDCf5coLbN6XGv1-CcG9_o2p2nuupE-EVH88nQzcWgI/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
@@ -203,7 +203,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1JDCf5coLbN6XGv1-CcG9_o2p2nuupE-EVH88nQzcWgI/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
@@ -227,7 +227,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1bTakg_T67L2ZqInbnmktnpJ6MUDUsCcOzH49ZvMSOgY/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
                 </div>
@@ -251,7 +251,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1qvwmlGQIngJ-y2obVQTZwrj0LGgx433G5s0HAOqRxGI/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
                 </div>
@@ -275,7 +275,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1V02D8tWwq9pL_r7bxvbYCRigTQRp_9RcOYEgMrL6zCo/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
                 </div>
@@ -299,7 +299,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://docs.google.com/presentation/d/1MW0mQtt9Zd2QJQVp1UqTkgwXroUJ76jUB1Oj5gNwqu0/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
                 </div>
