--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://docs.google.com/presentation/d/1JDCf5coLbN6XGv1-CcG9_o2p2nuupE-EVH88nQzcWgI/edit?usp=sharing">
+              <a href="https://docs.google.com/presentation/d/1aY_JAwmFShM0v0XEKiwsSqn3ZAzU976f06R6vyjn4H0/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Notify Me</h2>
+                      <h2 class="w-title">Waitlist Home</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Android</span> / <span class="w-date">2019</span>
+                        <span class="w-ctegory">Backend</span> / <span class="w-date">2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -299,16 +299,16 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://docs.google.com/presentation/d/1MW0mQtt9Zd2QJQVp1UqTkgwXroUJ76jUB1Oj5gNwqu0/edit?usp=sharing">
+              <a href="https://docs.google.com/presentation/d/1ir_afXLLTZHcX1MHaf9FY9QOwA-_ttmQLu4ZgV4dXPM/edit?usp=sharing">
                 <div class="work-img">
                   <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">CLI for UI entities (Go)</h2>
+                      <h2 class="w-title">Yelp Reservation & Waitlist Carousel</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Command Line Interface</span> / <span class="w-date">2016</span>
+                        <span class="w-ctegory">Backend</span> / <span class="w-date">2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
