--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                       <ul>
                         <li><a href="https://www.linkedin.com/in/nina-yang-27901a66/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                         <li><a href="https://www.instagram.com/nina_yang5/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="ion-document-text"></i></span></a></li>
+                        <li><a href="https://drive.google.com/file/d/1Q9ZZRMyTLUYTNCVHXTbeK6m8fGqrlhEB/view?usp=sharing"><span class="ico-circle"><i class="ion-document-text"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
